--- a/po/ca.po
+++ b/po/ca.po
@@ -7,43 +7,35 @@ msgstr ""
 "Project-Id-Version: Wike\n"
 "Language: ca\n"
 
-#: ../src/view.py:252
-#, fuzzy
+#: ../src/view.py:248
 msgid "Article not found"
 msgstr "No s'ha trobat l'article"
 
-#: ../src/page.py:103
-#, fuzzy
+#: ../src/page.py:100
 msgid "Can't find any results for requested query"
 msgstr "No es poden trobar resultats per a la consulta sol·licitada"
 
-#: ../src/view.py:254
-#, fuzzy
+#: ../src/view.py:250
 msgid "Can't access Wikipedia"
-msgstr "No es pot accedir a la Viquipèdia"
+msgstr "No es pot accedir a la Wikipedia"
 
-#: ../src/page.py:111
-#, fuzzy
+#: ../src/page.py:108
 msgid "Check your Internet connection and try again"
 msgstr "Comprova la connexió a Internet i torna-ho a provar"
 
 #: ../data/ui/dialogs.ui:53
-#, fuzzy
 msgid "Clear Bookmarks List?"
-msgstr "Vols esborrar la llista d'adreces d'interès?"
+msgstr "Vols netejar la llista d'adreces d'interès?"
 
 #: ../data/ui/dialogs.ui:54
-#, fuzzy
 msgid "All bookmarks in the list will be removed permanently."
 msgstr "Tots les adreces d'interès de la llista s'eliminaran permanentment."
 
 #: ../data/ui/dialogs.ui:65
-#, fuzzy
 msgid "Clear List"
 msgstr "Neteja la llista"
 
 #: ../data/ui/search-settings.ui:69
-#, fuzzy
 msgid "Search Suggestions"
 msgstr "Suggeriments de cerca"
 
@@ -51,71 +43,59 @@ msgstr "Suggeriments de cerca"
 #. 
 #. Hugo Olabera <hugolabe@gmail.com>
 #: ../data/ui/about.ui:16
-#, fuzzy
 msgid "translator-credits"
 msgstr "Ícar N. S. <icar.nin@protonmail.com>"
 
-#: ../src/view.py:364 ../data/ui/bookmarks.ui:26
-#, fuzzy
+#: ../src/view.py:360 ../data/ui/bookmarks.ui:26
 msgid "Add Bookmark"
 msgstr "Afegeix com a adreça d'interès"
 
 #: ../data/ui/shortcuts.ui:16
-#, fuzzy
 msgctxt "shortcut window"
 msgid "General"
 msgstr "General"
 
 #: ../data/ui/shortcuts.ui:31
-#, fuzzy
 msgctxt "shortcut window"
 msgid "Table of contents"
 msgstr "Taula de continguts"
 
 #: ../data/ui/shortcuts.ui:61
-#, fuzzy
 msgctxt "shortcut window"
 msgid "Preferences"
 msgstr "Preferències"
 
 #: ../data/ui/shortcuts.ui:73
-#, fuzzy
 msgctxt "shortcut window"
 msgid "Quit"
 msgstr "Surt"
 
 #: ../data/ui/shortcuts.ui:67
-#, fuzzy
 msgctxt "shortcut window"
 msgid "Keyboard shortcuts"
 msgstr "Dreceres de teclat"
 
 #: ../data/ui/shortcuts.ui:127
-#, fuzzy
 msgctxt "shortcut window"
 msgid "Navigation"
 msgstr "Navegació"
 
 #: ../data/ui/shortcuts.ui:130
-#, fuzzy
 msgctxt "shortcut window"
 msgid "Search articles"
 msgstr "Cerca articles"
 
 #: ../data/ui/shortcuts.ui:154
-#, fuzzy
 msgctxt "shortcut window"
 msgid "Previous page"
 msgstr "Pàgina anterior"
 
 #: ../data/ui/shortcuts.ui:160
-#, fuzzy
 msgctxt "shortcut window"
 msgid "Next page"
 msgstr "Pàgina següent"
 
 #: ../data/ui/shortcuts.ui:81 ../data/ui/shortcuts.ui:84
-#, fuzzy
 msgctxt "shortcut window"
 msgid "Bookmarks"
 msgstr "Adreces d'interès"
@@ -227,111 +207,92 @@ msgid "Allow Live Search on Desktop"
 msgstr "Permet la cerca en viu a l'escriptori"
 
 #: ../data/ui/prefs.ui:42
-#, fuzzy
 msgid "Warning: all desktop searches will be sent to Wikipedia"
-msgstr "Avís: totes les cerques d'escriptori s'enviaran a la Viquipèdia"
+msgstr "Avís: totes les cerques d'escriptori s'enviaran a la Wikipedia"
 
 #: ../data/ui/prefs.ui:59
-#, fuzzy
 msgid "Wike will remember the history of visited articles"
 msgstr "El Wike recordarà els articles visitats en un historial"
 
 #: ../data/ui/prefs.ui:68 ../data/ui/prefs.ui:80
-#, fuzzy
 msgid "Clear"
 msgstr "Neteja"
 
 #: ../data/ui/prefs.ui:76
-#, fuzzy
 msgid "Clear Personal Data"
 msgstr "Neteja les dades personals"
 
 #: ../data/ui/prefs.ui:77
-#, fuzzy
 msgid "Cookies and cache data will be deleted"
 msgstr "S'eliminaran les galetes i les dades de la memòria cau"
 
 #: ../data/ui/page.ui:87
-#, fuzzy
 msgid "Try Again"
 msgstr "Torna-ho a provar"
 
 #: ../data/ui/page.ui:78 ../data/ui/menu-main.ui:29
-#, fuzzy
 msgid "Random Article"
 msgstr "Article aleatori"
 
 #: ../data/ui/prefs.ui:28
-#, fuzzy
 msgid "Last article"
 msgstr "Últim article"
 
 #: ../data/ui/window.ui:99
-#, fuzzy
 msgid "Bookmarks"
 msgstr "Adreces d'interès"
 
 #: ../data/ui/languages.ui:56
-#, fuzzy
 msgid "Select All"
 msgstr "Selecciona-ho tot"
 
 #: ../data/ui/languages.ui:61
-#, fuzzy
 msgid "Select None"
 msgstr "No seleccionis res"
 
 #: ../data/ui/shortcuts.ui:19
-#, fuzzy
 msgctxt "shortcut window"
 msgid "Main menu"
 msgstr "Menú principal"
 
 #: ../data/ui/shortcuts.ui:98
-#, fuzzy
 msgctxt "shortcut window"
 msgid "Tabs"
 msgstr "Pestanyes"
 
 #: ../data/ui/shortcuts.ui:101
-#, fuzzy
 msgctxt "shortcut window"
 msgid "New tab"
 msgstr "Pestanya nova"
 
 #: ../data/ui/shortcuts.ui:107
-#, fuzzy
 msgctxt "shortcut window"
 msgid "Close current tab"
 msgstr "Tanca la pestanya actual"
 
 #: ../data/ui/shortcuts.ui:113
-#, fuzzy
 msgctxt "shortcut window"
 msgid "Next tab"
 msgstr "Pestanya següent"
 
 #: ../data/ui/shortcuts.ui:119
-#, fuzzy
 msgctxt "shortcut window"
 msgid "Previous tab"
 msgstr "Pestanya anterior"
 
-#: ../src/view.py:379
-#, fuzzy
+#: ../src/view.py:375
 msgid "Open Link in New Tab"
 msgstr "Obre l'enllaç en una pestanya nova"
 
-#: ../src/view.py:385
-#, fuzzy
+#: ../src/view.py:381
 msgid "Add Link to Bookmarks"
 msgstr "Afegeix l'enllaç a les adreces d'interès"
 
-#: ../src/view.py:381
+#: ../src/view.py:377
 msgid "Open Link in Browser"
 msgstr "Obre l'enllaç al navegador"
 
-#: ../src/view.py:387 ../data/ui/menu-main.ui:39
+#: ../src/view.py:383 ../data/ui/menu-main.ui:39
 msgid "Copy Link to Clipboard"
 msgstr "Copia l'enllaç al porta-retalls"
 
@@ -348,295 +309,311 @@ msgctxt "shortcut window"
 msgid "Random article"
 msgstr "Article aleatori"
 
-#: ../src/menu.py:88
+#: ../src/menu.py:86
 msgid "Pick a Font"
-msgstr ""
+msgstr "Selecciona una font"
 
-#: ../src/menu.py:117
+#: ../src/menu.py:115
 msgid "Font"
-msgstr ""
+msgstr "Font"
 
-#: ../src/history.py:36
+#: ../src/history.py:33
 msgid "Today"
-msgstr ""
+msgstr "Avui"
 
-#: ../src/history.py:36
+#: ../src/history.py:33
 msgid "Last 7 days"
-msgstr ""
+msgstr "Els últims 7 dies"
 
-#: ../src/history.py:36
+#: ../src/history.py:33
 msgid "Last 30 days"
-msgstr ""
+msgstr "Els últims 30 dies"
 
-#: ../src/history.py:36
+#: ../src/history.py:33
 msgid "Show full history"
-msgstr ""
+msgstr "Mostra l'historial complet"
 
-#: ../src/window.py:321 ../src/page.py:138
+#: ../src/window.py:312 ../src/page.py:135
 msgid "Bookmark added: "
-msgstr ""
+msgstr "Adreça d'interès desada:␣"
 
-#: ../src/window.py:435
+#: ../src/window.py:426
 msgid "Print operation completed"
-msgstr ""
+msgstr "L'operació d'impressió s'ha completat"
 
-#: ../src/window.py:441
+#: ../src/window.py:432
 msgid "Print operation failed"
-msgstr ""
+msgstr "L'operació d'impressió ha fallat"
 
-#: ../src/window.py:456
+#: ../src/window.py:447
 msgid "Link copied to clipboard"
-msgstr ""
-
-#: ../src/application.py:153
-msgid "Source Code"
-msgstr ""
+msgstr "L'enllaç s'ha copiat"
 
 #: ../src/application.py:154
-msgid "Report an Issue"
-msgstr ""
+msgid "Source Code"
+msgstr "Codi font"
 
 #: ../src/application.py:155
-msgid "Help Translating"
-msgstr ""
+msgid "Report an Issue"
+msgstr "Informa d'un problema"
 
 #: ../src/application.py:156
-msgid "Contributors"
-msgstr ""
+msgid "Help Translating"
+msgstr "Ajuda amb la traducció"
 
 #: ../src/application.py:157
-msgid "Flag Icons"
-msgstr ""
+msgid "Contributors"
+msgstr "Contribuïdors"
 
+#. Where is this shown? It's missing a bit of context to be properly translated
 #: ../src/application.py:158
+msgid "Flag Icons"
+msgstr "Icones de bandera"
+
+#: ../src/application.py:159
 msgid "All content from Wikipedia.org and available under CC BY-SA 3.0 unless otherwise noted.\n"
 "\n"
 "Wike is an independent development not endorsed by or affiliated with the Wikimedia Foundation."
-msgstr ""
+msgstr "Tot el contingut del Wikipedia.org està disponible sota una llicència CC BY-SA 3.0, a menys que s'indiqui el contrari.\n"
+"\n"
+"El Wike està desenvolupat independentment sense cap afiliació amb la fundació Wikimedia."
 
-#: ../src/page.py:75
+#: ../src/page.py:72
 msgid "Loading"
-msgstr ""
+msgstr "Carregant"
 
-#: ../src/page.py:102
+#: ../src/page.py:99
 msgid "Article not Found"
-msgstr ""
+msgstr "Article no trobat"
 
-#: ../src/page.py:110
+#: ../src/page.py:107
 msgid "Can't Access Wikipedia"
-msgstr ""
+msgstr "No s'ha pogut accedir a la Wikipedia"
 
-#: ../src/bookmarks.py:34
+#: ../src/bookmarks.py:31
 msgid "Reading list"
-msgstr ""
+msgstr "Llista de lectura"
 
 #: ../data/ui/toc.ui:42
 msgid "No Contents"
-msgstr ""
+msgstr "Cap contingut"
 
 #: ../data/ui/toc.ui:43
 msgid "There is no table of contents for this page"
-msgstr ""
+msgstr "No hi ha una taula de continguts per aquesta pàgina"
 
 #: ../data/ui/languages.ui:10 ../data/ui/search-settings.ui:26
 msgid "Pick your Languages"
-msgstr ""
+msgstr "Escolliu els vostres idiomes"
 
 #: ../data/ui/languages.ui:33 ../data/ui/search-settings.ui:20
 #: ../data/ui/langlinks.ui:17
 msgid "Filter languages"
-msgstr ""
+msgstr "Filtra els idiomes"
 
 #: ../data/ui/shortcuts.ui:25
 msgctxt "shortcut window"
 msgid "Sidebar"
-msgstr ""
+msgstr "Barra lateral"
 
 #: ../data/ui/shortcuts.ui:37
 msgctxt "shortcut window"
 msgid "Languages"
-msgstr ""
+msgstr "Idiomes"
 
 #: ../data/ui/shortcuts.ui:43
 msgctxt "shortcut window"
 msgid "Search text"
-msgstr ""
+msgstr "Cerca text"
 
 #: ../data/ui/shortcuts.ui:49
 msgctxt "shortcut window"
 msgid "Print"
-msgstr ""
+msgstr "Imprimeix"
 
 #: ../data/ui/shortcuts.ui:55
 msgctxt "shortcut window"
 msgid "Copy link to clipboard"
-msgstr ""
+msgstr "Copia l'enllaç al porta-retalls"
 
 #: ../data/ui/shortcuts.ui:136
 msgctxt "shortcut window"
 msgid "Main page"
-msgstr ""
+msgstr "Pàgina principal"
 
 #: ../data/ui/shortcuts.ui:148
 msgctxt "shortcut window"
 msgid "History of recent articles"
-msgstr ""
+msgstr "Historial dels articles recents"
 
 #: ../data/ui/shortcuts.ui:166
 msgctxt "shortcut window"
 msgid "Reload current page"
-msgstr ""
+msgstr "Recarrega la pàgina actual"
 
 #: ../data/ui/search.ui:15 ../data/ui/page.ui:57
 msgid "Search Wikipedia"
-msgstr ""
+msgstr "Cerca a la Wikipedia"
 
 #: ../data/ui/search.ui:26
 msgid "Search Settings"
-msgstr ""
+msgstr "Cerca a la configuració"
 
 #: ../data/ui/dialogs.ui:11
 msgid "New Bookmarks List"
-msgstr ""
+msgstr "Llista d'adreces d'interès nova"
 
 #: ../data/ui/dialogs.ui:18 ../data/ui/dialogs.ui:39
 msgid "List Name"
-msgstr ""
+msgstr "Nom de la llista"
 
 #: ../data/ui/dialogs.ui:26 ../data/ui/dialogs.ui:47 ../data/ui/dialogs.ui:64
 #: ../data/ui/dialogs.ui:76 ../data/ui/dialogs.ui:88
 msgid "Cancel"
-msgstr ""
+msgstr "Cancel·la"
 
 #: ../data/ui/dialogs.ui:27
 msgid "Create List"
-msgstr ""
+msgstr "Crea la llista"
 
 #: ../data/ui/dialogs.ui:32
 msgid "Rename Bookmarks List"
-msgstr ""
+msgstr "Canvia el nom de la llista d'adreces d'interès"
 
 #: ../data/ui/dialogs.ui:48
 msgid "Rename List"
-msgstr ""
+msgstr "Canvia el nom de la llista"
 
 #: ../data/ui/dialogs.ui:60
 msgid "Also delete the list"
-msgstr ""
+msgstr "Borra també la llista"
 
 #: ../data/ui/dialogs.ui:70
 msgid "Clear History?"
-msgstr ""
+msgstr "Neteja l'historial?"
 
 #: ../data/ui/dialogs.ui:77 ../data/ui/history.ui:26
 msgid "Clear History"
-msgstr ""
+msgstr "Neteja l'historial"
 
 #: ../data/ui/prefs.ui:26
 msgid "Wikipedia main page"
-msgstr ""
+msgstr "Pàgina principal de la Wikipedia"
 
 #: ../data/ui/prefs.ui:27
 msgid "Random article"
-msgstr ""
+msgstr "Article aleatori"
 
-#: ../data/ui/headerbar.ui:25
+#: ../data/ui/headerbar.ui:27
 msgid "New Tab"
-msgstr ""
+msgstr "Pestanya nova"
 
-#: ../data/ui/headerbar.ui:43 ../data/ui/actionbar.ui:34
+#: ../data/ui/headerbar.ui:46 ../data/ui/actionbar.ui:34
 msgid "View"
-msgstr ""
+msgstr "Mostra"
 
-#: ../data/ui/headerbar.ui:49 ../data/ui/actionbar.ui:27
+#: ../data/ui/headerbar.ui:52 ../data/ui/actionbar.ui:27
 msgid "Sidebar"
-msgstr ""
+msgstr "Barra lateral"
 
+#. Is this imperative or does it state that it's text to perform a search?
 #: ../data/ui/page.ui:20
 msgid "Search text"
-msgstr ""
+msgstr "Cerca text"
 
 #: ../data/ui/page.ui:58
 msgid "Start typing to search Wikipedia articles"
-msgstr ""
+msgstr "Comença a escriure per buscar articles de la Wikipedia"
 
 #: ../data/ui/page.ui:68 ../data/ui/menu-main.ui:25
 msgid "Main Page"
-msgstr ""
+msgstr "Pàgina principal"
 
 #: ../data/ui/langlinks.ui:38
 msgid "No Languages"
-msgstr ""
+msgstr "Cap idioma"
 
 #: ../data/ui/langlinks.ui:39
 msgid "This page is not available in other languages"
-msgstr ""
+msgstr "Aquesta pàgina no està disponible en cap altre idioma"
 
 #: ../data/ui/menu-view.ui:21
 msgid "Show"
-msgstr ""
+msgstr "Mostra"
 
 #: ../data/ui/menu-view.ui:23
 msgid "Language Flags"
-msgstr ""
+msgstr "Banderes d'idiomes"
 
 #: ../data/ui/menu-view.ui:27
 msgid "Link Previews"
-msgstr ""
+msgstr "Previsualització dels enllaços"
 
 #: ../data/ui/history.ui:49
 msgid "Empty History"
-msgstr ""
+msgstr "Historial buit"
 
 #: ../data/ui/history.ui:50
 msgid "There are no recent articles in the history"
-msgstr ""
+msgstr "No hi ha articles recents a l'historial"
 
 #: ../data/ui/bookmarks.ui:55
 msgid "No Bookmarks"
-msgstr ""
+msgstr "Cap adreça d'interès"
 
 #: ../data/ui/bookmarks.ui:56
 msgid "Use the Add Bookmark button or press Ctrl+D to add the current article to the list"
-msgstr ""
+msgstr "Utilitzeu el botó d'afegir una adreça d'interès o premeu Ctrl+D per desar l'article actual a la llista"
 
 #: ../data/ui/window.ui:78
 msgid "Contents"
-msgstr ""
+msgstr "Contigut"
 
 #: ../data/ui/window.ui:110
 msgid "History"
-msgstr ""
+msgstr "Historial"
 
 #: ../data/ui/menu-main.ui:13
 msgid "Print"
-msgstr ""
+msgstr "Imprimeix"
 
 #: ../data/ui/menu-main.ui:18
 msgid "Search Text"
-msgstr ""
+msgstr "Cerca text"
 
 #: ../data/ui/menu-main.ui:35
 msgid "Open in Browser"
-msgstr ""
+msgstr "Obre al navegador"
 
 #: ../data/ui/bookmarks-menu.ui:12
 msgid "Create New List…"
-msgstr ""
+msgstr "Crea una llista nova…"
 
 #: ../data/ui/bookmarks-menu.ui:18
 msgid "Rename List…"
-msgstr ""
+msgstr "Canvia el nom de la llista…"
 
 #: ../data/ui/bookmarks-menu.ui:22
 msgid "Clear List…"
-msgstr ""
+msgstr "Neteja la llista…"
 
 #: ../data/com.github.hugolabe.Wike.metainfo.xml.in:16
 msgid "It supports more than 300 languages and integrates with desktop searches, providing suggestions that make it easier to find any content. Other features are: bookmarks with multiple lists, article table of contents, history, text searches and much more…"
-msgstr ""
+msgstr "Suporta més de 300 idiomes i s'integra amb les cerques de l'escriptori, proveïnt suggeriments que faciliten trobar qualsevol tipus de contingut. Altres característiques: adreces d'interès en múltiples llistes, taules de continguts dels articles, historial, cerques del text i molt més…"
 
 #: ../data/ui/window.ui:55
 msgid "Pin Sidebar"
-msgstr ""
+msgstr "Fixa la barra lateral"
+
+#: ../data/ui/headerbar.ui:13
+msgid "Back"
+msgstr "Retrocedeix"
+
+#: ../data/ui/headerbar.ui:20
+msgid "Forward"
+msgstr "Avança"
+
+#: ../data/ui/headerbar.ui:39
+msgid "Main Menu"
+msgstr "Menú principal"
 
