--- a/po/sv.po
+++ b/po/sv.po
@@ -349,18 +349,16 @@ msgid "Flag Icons"
 msgstr "Flaggikoner"
 
 #: ../src/application.py:159
-#, fuzzy
 msgid "All content from Wikipedia.org and available under CC BY-SA 4.0 unless otherwise noted.\n"
 "\n"
 "Wike is an independent development not endorsed by or affiliated with the Wikimedia Foundation."
-msgstr "Allt innehåll från Wikipedia.org och tillgängligt under CC BY-SA 3.0 om inget annat anges.\n"
+msgstr "Allt innehåll från Wikipedia.org och tillgängligt under CC BY-SA 4.0 om inget annat anges.\n"
 "\n"
 "Wike är oberoende utvecklat och stöds inte av eller är anslutet till Wikimedia Foundation."
 
 #: ../src/page.py:88 ../src/page.py:91
-#, fuzzy
 msgid "Loading…"
-msgstr "Laddar"
+msgstr "Laddar…"
 
 #: ../src/page.py:216
 msgid "Article not Found"
