--- a/po/fi.po
+++ b/po/fi.po
@@ -12,11 +12,11 @@ msgid "Article not found"
 msgstr "Artikkelia ei löydy"
 
 #: ../src/page.py:231
-msgid "Can't find any results for requested query"
+msgid "Can’t find any results for requested query"
 msgstr "Hakuehdoilla ei löytynyt tuloksia"
 
 #: ../src/view.py:295
-msgid "Can't access Wikipedia"
+msgid "Can’t access Wikipedia"
 msgstr "Ei pääsyä Wikipediaan"
 
 #: ../src/page.py:239
@@ -51,57 +51,57 @@ msgid "Add Bookmark"
 msgstr "Lisää kirjanmerkki"
 
 #: ../data/gtk/help-overlay.ui:21
-msgctxt "shortcut window"
+msgctxt "shortcuts dialog"
 msgid "General"
 msgstr "Yleiset"
 
 #: ../data/gtk/help-overlay.ui:39
-msgctxt "shortcut window"
+msgctxt "shortcuts dialog"
 msgid "Table of contents"
 msgstr "Sisällysluettelo"
 
 #: ../data/gtk/help-overlay.ui:74
-msgctxt "shortcut window"
+msgctxt "shortcuts dialog"
 msgid "Preferences"
 msgstr "Asetukset"
 
 #: ../data/gtk/help-overlay.ui:88
-msgctxt "shortcut window"
+msgctxt "shortcuts dialog"
 msgid "Quit"
 msgstr "Lopeta"
 
 #: ../data/gtk/help-overlay.ui:81
-msgctxt "shortcut window"
+msgctxt "shortcuts dialog"
 msgid "Keyboard shortcuts"
 msgstr "Pikanäppäimet"
 
 #: ../data/gtk/help-overlay.ui:164
-msgctxt "shortcut window"
+msgctxt "shortcuts dialog"
 msgid "Navigation"
 msgstr "Liikkuminen"
 
 #: ../data/gtk/help-overlay.ui:168
-msgctxt "shortcut window"
+msgctxt "shortcuts dialog"
 msgid "Search articles"
 msgstr "Etsi artikkeleja"
 
 #: ../data/gtk/help-overlay.ui:196
-msgctxt "shortcut window"
+msgctxt "shortcuts dialog"
 msgid "Previous page"
 msgstr "Edellinen sivu"
 
 #: ../data/gtk/help-overlay.ui:203
-msgctxt "shortcut window"
+msgctxt "shortcuts dialog"
 msgid "Next page"
 msgstr "Seuraava sivu"
 
 #: ../data/gtk/help-overlay.ui:99 ../data/gtk/help-overlay.ui:103
-msgctxt "shortcut window"
+msgctxt "shortcuts dialog"
 msgid "Bookmarks"
 msgstr "Kirjanmerkit"
 
 #: ../data/gtk/help-overlay.ui:110
-msgctxt "shortcut window"
+msgctxt "shortcuts dialog"
 msgid "Add bookmark"
 msgstr "Lisää kirjanmerkki"
 
@@ -229,32 +229,32 @@ msgid "Select None"
 msgstr "Älä valitse mitään"
 
 #: ../data/gtk/help-overlay.ui:25
-msgctxt "shortcut window"
+msgctxt "shortcuts dialog"
 msgid "Main menu"
 msgstr "Päävalikko"
 
 #: ../data/gtk/help-overlay.ui:121
-msgctxt "shortcut window"
+msgctxt "shortcuts dialog"
 msgid "Tabs"
 msgstr "Välilehdet"
 
 #: ../data/gtk/help-overlay.ui:125
-msgctxt "shortcut window"
+msgctxt "shortcuts dialog"
 msgid "New tab"
 msgstr "Uusi välilehti"
 
 #: ../data/gtk/help-overlay.ui:132
-msgctxt "shortcut window"
+msgctxt "shortcuts dialog"
 msgid "Close current tab"
 msgstr "Sulje nykyinen välilehti"
 
 #: ../data/gtk/help-overlay.ui:139
-msgctxt "shortcut window"
+msgctxt "shortcuts dialog"
 msgid "Next tab"
 msgstr "Seuraava välilehti"
 
 #: ../data/gtk/help-overlay.ui:146
-msgctxt "shortcut window"
+msgctxt "shortcuts dialog"
 msgid "Previous tab"
 msgstr "Edellinen välilehti"
 
@@ -283,7 +283,7 @@ msgid "You can search in other languages ​​using a prefix. Eg. -es to search
 msgstr "Voit etsiä muilla kielillä käyttämällä etuliitettä. Esimerkiksi -en etsii englanniksi"
 
 #: ../data/gtk/help-overlay.ui:182
-msgctxt "shortcut window"
+msgctxt "shortcuts dialog"
 msgid "Random article"
 msgstr "Satunnainen artikkeli"
 
@@ -364,7 +364,7 @@ msgid "Article not Found"
 msgstr "Artikkelia ei löydy"
 
 #: ../src/page.py:238
-msgid "Can't Access Wikipedia"
+msgid "Can’t Access Wikipedia"
 msgstr "Pääsy Wikipediaan ei onnistu"
 
 #: ../src/bookmarks.py:33
@@ -384,7 +384,7 @@ msgid "Pick your Languages"
 msgstr "Valitse kielet"
 
 #: ../data/gtk/help-overlay.ui:32
-msgctxt "shortcut window"
+msgctxt "shortcuts dialog"
 msgid "Sidebar"
 msgstr "Sivupalkki"
 
@@ -572,11 +572,11 @@ msgstr "Se tukee yli 300:aa kieltä ja integroituu työpöytähakuihin tarjoten 
 
 #: ../data/gtk/window.ui:304
 msgid "Back"
-msgstr "Edellinen"
+msgstr "Takaisin"
 
 #: ../data/gtk/window.ui:313
 msgid "Forward"
-msgstr "Seuraava"
+msgstr "Eteenpäin"
 
 #: ../data/gtk/window.ui:61 ../data/gtk/window.ui:262
 msgid "Main Menu"
@@ -613,12 +613,12 @@ msgstr "Muut kielet"
 
 #: ../src/languages.py:122
 msgid "1 language selected"
-msgstr "1 kieli valittu"
+msgstr "1 kieli valittuna"
 
 #. Don't remove %s tag!
 #: ../src/languages.py:124
 msgid "%s languages selected"
-msgstr "%s kieltä valittu"
+msgstr "%s kieltä valittuna"
 
 #: ../data/gtk/langlinks.ui:32 ../data/gtk/languages.ui:27
 msgid "Search Languages"
